examples/built-in-control-structures/transcript.txt
/*
 * Copyright (C) 2007-2020 Artima, Inc. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * Automatically generated Scala interpreter transcript from:
 *
 * Programming in Scala (Fifth Edition)
 * by Martin Odersky, Lex Spoon, Bill Venners, and Frank Sommers
 *
 * http://booksites.artima.com/programming_in_scala_5ed
 */


scala> def greet() = println("hi")
greet: ()Unit

scala> val iAmUnit = greet() == ()
                             ^
       warning: comparing values of types Unit and Unit using `==` will always yield true
hi
iAmUnit: Boolean = true

scala> for i <- 1 to 4 do
        println(s"Iteration \$i")
           ^
       error: '(' expected but identifier found.

scala> for i <- 1 until 4 do
        println(s"Iteration \$i")
           ^
       error: '(' expected but identifier found.

scala> val a = 1
a: Int = 1

scala> val a = 2
a: Int = 2

scala> println(a)
2

